# Quol

./: .gitignore  README.md  commands.json  launcher.spec  main.py  main.spec  quol.spec  requirements.txt  style.qss  test.py  update_settings.json  updater.spec  updates.txt  windows-helper.py  windows-helper.spec
Quol-CPP/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  settings.default.json  settings.json
Quol-CPP/plugins/broken/res/: config.json
Quol-CPP/plugins/chance/: CMakeLists.txt  Chance.cpp  Chance.hpp
Quol-CPP/plugins/chance/res/: config.json
Quol-CPP/plugins/chat/: CMakeLists.txt  Chat.cpp  Chat.hpp
Quol-CPP/plugins/chat/lib/: ChatConfig.cpp  ChatConfig.hpp  SnipOverlay.cpp  SnipOverlay.hpp
Quol-CPP/plugins/chat/lib/providers/: GeminiProvider.cpp  GeminiProvider.hpp  GroqProvider.cpp  GroqProvider.hpp  OllamaProvider.cpp  OllamaProvider.hpp  ProviderTypes.hpp
Quol-CPP/plugins/chat/res/: config.json
Quol-CPP/plugins/colorPicker/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.hpp
Quol-CPP/plugins/colorPicker/res/: config.json
Quol-CPP/plugins/draw/: CMakeLists.txt  Draw.cpp  Draw.hpp
Quol-CPP/plugins/draw/lib/: ColorWheel.cpp  ColorWheel.hpp  DrawOverlay.cpp  DrawOverlay.hpp
Quol-CPP/plugins/draw/res/: config.json
Quol-CPP/plugins/example/: CMakeLists.txt  Example.cpp  Example.hpp  ExamplePlugin.cpp  ExamplePlugin.hpp
Quol-CPP/plugins/example/lib/: adder.cpp
Quol-CPP/plugins/example/res/: config.json
Quol-CPP/plugins/inputtest/: CMakeLists.txt  InputTest.cpp  InputTest.hpp  InputTestPlugin.cpp  InputTestPlugin.hpp
Quol-CPP/plugins/inputtest/res/: config.json
Quol-CPP/plugins/keymap/: CMakeLists.txt  Keymap.cpp  Keymap.hpp
Quol-CPP/plugins/keymap/lib/: KeymapGroupDialog.cpp  KeymapGroupDialog.hpp
Quol-CPP/plugins/keymap/res/: config.json
Quol-CPP/plugins/macro/: CMakeLists.txt  Macro.cpp  Macro.hpp
Quol-CPP/plugins/macro/res/: config.json
Quol-CPP/plugins/quol/res/: config.json
Quol-CPP/python plugins/draw/: window.py
Quol-CPP/python plugins/draw/lib/: color_wheel.py
Quol-CPP/python plugins/draw/res/: config.json
Quol-CPP/python plugins/keymap/: window.py
Quol-CPP/python plugins/keymap/res/: config.json
Quol-CPP/python-stuff/-/fire/: shader.vert
Quol-CPP/python-stuff/-/tony3/: transition.py
Quol-CPP/python-stuff/keymap/lib/: keymap_group.py
Quol-CPP/python-stuff/keymap/res/: keymaps.json
Quol-CPP/res/: app_icon.rc.in
Quol-CPP/res/styles/dark/: styles.qss
Quol-CPP/src/: main.cpp
Quol-CPP/src/core/: AppSettingsManager.cpp  AppSettingsManager.hpp  InputManager.cpp  InputManager.hpp  LogManager.cpp  LogManager.hpp  PluginManager.cpp  PluginManager.hpp  PluginStoreManager.cpp  PluginStoreManager.hpp  QuolApplication.cpp  QuolApplication.hpp
Quol-CPP/src/plugin_api/: IQuolPlugin.hpp  PluginConfig.cpp  PluginConfig.hpp  QuolServices.hpp
Quol-CPP/src/plugins/broken/: BrokenPlugin.cpp  BrokenPlugin.hpp
Quol-CPP/src/plugins/example/: ExamplePlugin.cpp  ExamplePlugin.hpp
Quol-CPP/src/plugins/example/lib/: adder.cpp  adder.hpp
Quol-CPP/src/plugins/inputtest/: InputTestPlugin.cpp  InputTestPlugin.hpp
Quol-CPP/src/ui/: ConfigWindow.cpp  ConfigWindow.hpp  QuolMainWindow.cpp  QuolMainWindow.hpp  QuolPopupWindow.cpp  QuolPopupWindow.hpp  QuolWindow.cpp  QuolWindow.hpp  SplashScreen.cpp  SplashScreen.hpp  TitleBar.cpp  TitleBar.hpp  TransitionManager.cpp  TransitionManager.hpp  UpdateNotifier.cpp  UpdateNotifier.hpp
Quol-CPP/src/ui/transitions/: FadeTransition.hpp  ITransition.hpp  NoneTransition.hpp  RandTransition.hpp  SlideTransition.hpp
Quol-CPP/transitions/fire/: CMakeLists.txt  FireTransition.cpp
Quol-CS/: Quol.slnx  build-plugins.bat  build-plugins.ps1
Quol-CS/Plugins/: Directory.Build.props
Quol-CS/Plugins/PluginExample/: PluginExample.csproj  TestWindow.axaml  TestWindow.axaml.cs  View.axaml  View.axaml.cs  config.json
Quol-CS/Plugins/PluginOne/: PluginOne.csproj  View.axaml  View.axaml.cs  config.json
Quol-CS/Plugins/PluginRandom/: PluginRandom.csproj  View.axaml  View.axaml.cs  config.json
Quol-CS/Plugins/PluginTwo/: PluginTwo.csproj  View.axaml  View.axaml.cs  config.json
Quol-CS/Quol/: App.axaml  App.axaml.cs  Program.cs  Quol.csproj  app.manifest
Quol-CS/Quol/Assets/: QuolWindowIcons.cs
Quol-CS/Quol/Config/: main.config.json
Quol-CS/Quol/Models/: PluginConfigFile.cs
Quol-CS/Quol/Plugins/: PluginConfigExtensions.cs  PluginProxy.cs  QuolPluginBase.cs
Quol-CS/Quol/Services/: ConfigService.cs  GlobalInputService.cs  LoggingService.cs  PluginConfigService.cs  PluginLoaderService.cs
Quol-CS/Quol/Styles/: QuolStyles.axaml
Quol-PY/app/: main.py  qlib_loader.py  qlogging.py  settings.json  updater.py
app/: app.py  globals.py  io_helpers.py  launcher.py  main.py  manifest.json  move_transition.py  qlib_loader.py  qlogging.py  quol_titlebar.py  quol_window.py  settings.json  shader_transition.py  test.py  transition.py  transition_plugin.py  updater.py  window_plugin.py
app/lib/: app.py  global_input_manager.py  io_helpers.py  loading_screen.py  move_transition.py  quol_titlebar.py  quol_transition.py  quol_window.py  shader_transition.py  transition_loader.py  window_loader.py
app/qlib/: app.py  input_manager.py  io_helpers.py  launcher.py  move_transition.py  quol_transition.py  quol_window.py  transition_loader.py  updater.py  window_loader.py  worker.py
app/quol/: window.py
app/res/: chat.json  clipboard.json  notes.json  paths.py  pos.json  settings.json  styles.qss
app/transitions/: shader_transition.py
app/windows/: chance.py  chat.py  clipboard.py  color_picker.py  custom_widgets.py  draw.py  info.py  notes.py  run_command.py  temp.py
components/: custom_window.py  round_window.py  title_bar.py
res/: commands.json  settings.json
src/: windows-helper.py
src/components/: custom_window.py
src/res/: settings.json
src/windows/: chance.py  color_picker.py  info.py  python_shell.py  run_command.py  temp.py
windows/: chance.py  coin.py  color_picker.py  info.py  run_command.py  test.py  test2.py
(+111 files in other folders)
